<resources>
    <string name="app_name">CineTix</string>
    <string name="app_title">Seats Reserved,\nPopcorn Ready!</string>
    <string name="get_started">Get Started</string>
    <string name="login">Log in</string>
    <string name="login_image">login_image</string>
    <string name="email">Enter Your Email</string>
    <string name="password">Enter Your Password</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? Signup</string>
    <string name="toggle_password_visibility" />
    <string name="signup_image" />
    <string name="signup">Signup</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="signup2">signup</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="profile">Profile</string>
    <string name="search">Search Movies Here</string>
    <string name="top_movies">Top Movies</string>
    <string name="see_all">See all</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="explorer">Explorer</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="imdb">IMDB</string>
    <string name="summary">Summary</string>
    <string name="test">test</string>
    <string name="cast">Cast</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="name">Name</string>
    <string name="selected_seats">Selected Seats</string>
    <string name="available">Available</string>
    <string name="selected">Selected</string>
    <string name="unavailable">Unavailable</string>
    <string name="download_ticket">Download Ticket</string>
    <string name="_0">$0</string>
    <string name="_0_seat_selected">0 Seat Selected</string>
    <string name="hyphen">-</string>
    <string name="time">time</string>
    <string name="bookmark">Bookmark</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>

</resources>