<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/white3"
        app:cnb_textColor="@color/PersianBlue"
        />
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/btn_2"
        android:title="@string/favorite"
        app:cnb_backgroundColor="@color/white3"
        app:cnb_textColor="@color/PersianBlue" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/btn_4"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/white3"
        app:cnb_textColor="@color/PersianBlue"
        />



</menu>