<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white3"
    android:gravity="center">


    <TextView
        android:id="@+id/forgotPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password2"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/TealBlue" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPasswordTitle"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />


    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/TealBlue"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize" />


    <TextView
        android:id="@+id/backToLoginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetPasswordButton"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/back_to_login"
        android:textColor="@color/seaBlue2"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>
